<resources>
  <string name="app_name">Notes</string>
  <string name="n_text">n</string>
  <string name="notes">Notes</string>
  <string name="archived_notes_text">Archived Notes</string>
  <string name="settings_text">Settings</string>
  <string name="search_text">Search</string>
  <string name="filter_text">Filter</string>
  <string name="share_text">Share</string>
  <string name="lock_text">Lock</string>
  <string name="archive_text">Archive</string>
  <string name="delete_text">Delete</string>
  <string name="tag_text">Tag</string>
  <string name="title_text">Title</string>
  <string name="content_text">Content</string>
  <string name="save">Save</string>
  <string name="work_text">Work</string>
  <string name="personal_text">Personal</string>
  <string name="games_text">Family</string>
  <string name="family_text">Family</string>
  <string name="study_text">Study</string>
  <string name="uncategorised_text">Uncategorised</string>
  <string name="tag_placeholder">#Recipes</string>
  <string name="title_placeholder">KFC recipe</string>
  <string name="note_date">16 Jul</string>

  <string name="created_modified_text_p">Created 4 Jul 2017 21:04 - Modified 16 Jul 2019 18:56</string>
  <string name="created_modified_text">Created %1$s - Modified %2$s</string>
  <string name="sorts_and_filters_text">Sorts and Filters</string>
  <string name="done_text">Done</string>
  <string name="sort_by_text">Sort By</string>
  <string name="tags_text">Tags</string>
  <string name="all_notes_text">All Notes</string>

  <string name="share_text_template">%1$s \n\n %2$s \n\n #SharedFromNotes</string>
  <string name="you_see_that_nothing_nclick_on_the_to_add_a_new_note">You see that?, nothing! \n <b>Click on the \'+\' to add a new note.</b></string>

</resources>
